RESOLVED FIXED23219
Background-position does not Transition
https://bugs.webkit.org/show_bug.cgi?id=23219
Summary Background-position does not Transition
Faruk Ates
Reported 2009-01-09 16:28:22 PST
Specifying a CSS Transition on background-position has no effect. See URL for testcase example of a background image moving from 40px 40px to 80px 80px on :hover but there's no transition being applied at all.
Attachments
Patch, changelog, testcases (12.79 KB, patch)
2009-04-23 22:55 PDT, Simon Fraser (smfr)
darin: review+
Faruk Ates
Comment 1 2009-02-26 15:03:36 PST
*** Bug 23984 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 2 2009-04-23 22:55:24 PDT
Created attachment 29735 [details] Patch, changelog, testcases
Simon Fraser (smfr)
Comment 3 2009-04-24 09:11:01 PDT
Note You need to log in before you can comment on or make changes to this bug.